python_sources = [
  '__init__.py',
  '__init__.pyi',
  'dpy.py',
  'gradients.py',
  'image.py',
  'peaks.py',
  'pickles.py',
  'stateful_tractogram.py',
  'streamline.py',
  'surface.py',
  'utils.py',
  'vtk.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/io'
)


subdir('tests')