python_sources = [
    '__init__.py',
    'combined_workflow.py',
    'io.py',
    'reconst.py',
    'tracking.py',
    'denoise.py',
    'mask.py',
    'segment.py',
    'viz.py',
    'align.py',
    'docstring_parser.py',
    'stats.py',
    'workflow.py',
    'base.py',
    'flow_runner.py',
    'multi_io.py'
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/workflows'
)

subdir('tests')