python_sources = [
    '__init__.py',
    'align.py',
    'base.py',
    'cli.py',
    'combined_workflow.py',
    'denoise.py',
    'docstring_parser.py',
    'flow_runner.py',
    'io.py',
    'mask.py',
    'multi_io.py',
    'nn.py',
    'reconst.py',
    'segment.py',
    'stats.py',
    'tracking.py',
    'utils.py',
    'viz.py',
    'workflow.py',
]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/workflows'
)

subdir('tests')