python_sources = ['__init__.py',
  'test_api.py',
  'test_crosscorr.py',
  'test_expectmax.py',
  'test_imaffine.py',
  'test_imwarp.py',
  'test_metrics.py',
  'test_parzenhist.py',
  'test_reslice.py',
  'test_scalespace.py',
  'test_streamlinear.py',
  'test_streamwarp.py',
  'test_sumsqdiff.py',
  'test_transforms.py',
  'test_vector_fields.py',
  'test_whole_brain_slr.py',
  ]

py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/align/tests'
)


