python_sources = ['__init__.py',
  'test_geometry.py',
  'test_gradients.py',
  'test_graph.py',
  'test_interpolation.py',
  'test_ndindex.py',
  'test_optimize.py',
  'test_rng.py',
  'test_sphere.py',
  'test_subdivide_octahedron.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/core/tests'
)


