data_files = [
    '55dir_grad.bval',
    'eg_3voxels.pkl',
    'hermite_constraint_2.npz',
    'small_25.bval',
    '55dir_grad.bvec',
    'evenly_distributed_sphere_362.npz',
    'hermite_constraint_4.npz',
    'small_25.bvec',
    'C.npy',
    'evenly_distributed_sphere_642.npz',
    'hermite_constraint_6.npz',
    'small_25.nii.gz',
    'C1.pkl.gz',
    'evenly_distributed_sphere_724.npz',
    'hermite_constraint_8.npz',
    'small_64D.bval',
    'C3.pkl.gz',
    'fib0.pkl.gz',
    'life_matlab_rmse.npy',
    'small_64D.bvals.npy',
    'EuDX_small_25.trk',
    'fib1.pkl.gz',
    'life_matlab_weights.npy',
    'small_64D.bvec',
    'S0_10slices.nii.gz',
    'fib2.pkl.gz',
    'small_64D.gradients.npy',
    'ScannerVectors_GQI101.txt',
    'func_coef.nii.gz',
    'minimal_bundles.zip',
    'small_64D.nii',
    'aniso_vox.nii.gz',
    'func_discrete.nii.gz',
    'record_horizon.log.gz',
    'sphere_grad.txt',
    'ascm_out_test.nii.gz',
    'grad_514.txt',
    'repulsion100.npz',
    't1_coronal_slice.npy',
    'cb_2.npz',
    'gtab_3shell.txt',
    'repulsion200.npz',
    'tdesign45.txt',
    'circle.npy',
    'gtab_isbi2013_2shell.txt',
    'repulsion724.npz',
    'test_piesno.nii.gz',
    'dipy_colormaps.json',
    'gtab_taiwan_dsi.txt',
    'small_101D.bval',
    'test_ui_text_block.npz',
    'dsi4169_b_table.txt',
    'hermite_constraint_0.npz',
    'small_101D.bvec',
    'tracks300.trk',
    'dsi515_b_table.txt',
    'hermite_constraint_10.npz',
    'small_101D.nii.gz',
]

py3.install_sources(
    data_files,
    pure: false,
    subdir: 'dipy/data/files'
)