data_files = [
    '55dir_grad.bval',
    '55dir_grad.bvec',
    'eg_3voxels.pkl',
    'aniso_vox.nii.gz',
    'ascm_out_test.nii.gz',
    'C.npy',
    'C1.pkl.gz',
    'C3.pkl.gz',
    'cb_2.npz',
    'circle.npy',
    'dipy_colormaps.json',
    'dki_constraint_0.npz',
    'dki_constraint_2.npz',
    'dki_constraint_4.npz',
    'dki_constraint.npz',
    'dki_constraint_SC.npz',
    'dsi515_b_table.txt',
    'dsi4169_b_table.txt',
    'eg_3voxels.pkl',
    'EuDX_small_25.trk',
    'evenly_distributed_sphere_362.npz',
    'evenly_distributed_sphere_642.npz',
    'evenly_distributed_sphere_724.npz',
    'fib0.pkl.gz',
    'fib1.pkl.gz',
    'fib2.pkl.gz',
    'func_coef.nii.gz',
    'func_discrete.nii.gz',
    'grad_514.txt',
    'gtab_3shell.txt',
    'gtab_isbi2013_2shell.txt',
    'gtab_taiwan_dsi.txt',
    'hermite_constraint_0.npz',
    'hermite_constraint_2.npz',
    'hermite_constraint_4.npz',
    'hermite_constraint_6.npz',
    'hermite_constraint_8.npz',
    'hermite_constraint_10.npz',
    'life_matlab_rmse.npy',
    'life_matlab_weights.npy',
    'minimal_bundles.zip',
    'record_horizon.log.gz',
    'repulsion100.npz',
    'repulsion200.npz',
    'repulsion724.npz',
    'S0_10slices.nii.gz',
    'ScannerVectors_GQI101.txt',
    'small_25.bval',
    'small_25.bvec',
    'small_25.nii.gz',
    'small_64D.bval',
    'small_64D.bvals.npy',
    'small_64D.bvec',
    'small_64D.gradients.npy',
    'small_64D.nii',
    'small_101D.bval',
    'small_101D.bvec',
    'small_101D.nii.gz',
    'sphere_grad.txt',
    't1_coronal_slice.npy',
    'tdesign45.txt',
    'test_piesno.nii.gz',
    'test_ui_text_block.npz',
    'tracks300.trk',
]

py3.install_sources(
    data_files,
    pure: false,
    subdir: 'dipy/data/files'
)
