python_sources = [
  '__init__.py',
  'test_ascm.py',
  'test_denoise.py',
  'test_gibbs.py',
  'test_kernel.py',
  'test_lpca.py',
  'test_nlmeans.py',
  'test_noise_estimate.py',
  'test_non_local_means.py',
  'test_patch2self.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/denoise/tests'
)


