python_sources = [
  '__init__.py',
  'test_bingham.py',
  'test_cache.py',
  'test_cross_validation.py',
  'test_csdeconv.py',
  'test_cti.py',
  'test_dki.py',
  'test_dki_micro.py',
  'test_dsi.py',
  'test_dsi_deconv.py',
  'test_dsi_metrics.py',
  'test_dti.py',
  'test_eudx_dg.py',
  'test_forecast.py',
  'test_fwdti.py',
  'test_gqi.py',
  'test_ivim.py',
  'test_mapmri.py',
  'test_mcsd.py',
  'test_msdki.py',
  'test_multi_voxel.py',
  'test_odf.py',
  'test_peak_finding.py',
  'test_qtdmri.py',
  'test_qti.py',
  'test_reco_utils.py',
  'test_rumba.py',
  'test_sfm.py',
  'test_shm.py',
  'test_shore.py',
  'test_shore_metrics.py',
  'test_shore_odf.py',
  'test_utils.py',
  'test_vec_val_vect.py',
  'test_weights_method.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/reconst/tests'
)


