python_sources = [
  '__init__.py',
  'test_adjustment.py',
  'test_bundles.py',
  'test_clustering.py',
  'test_feature.py',
  'test_fss.py',
  'test_mask.py',
  'test_metric.py',
  'test_mrf.py',
  'test_qbx.py',
  'test_quickbundles.py',
  'test_tissue.py',
  'test_utils.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/segment/tests'
)


