python_sources = [
  '__init__.py',
  'test_distances.py',
  'test_fbc.py',
  'test_learning.py',
  'test_life.py',
  'test_mesh.py',
  'test_metrics.py',
  'test_propagation.py',
  'test_stopping_criterion.py',
  'test_streamline.py',
  'test_track_volumes.py',
  'test_tracking.py',
  'test_utils.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/tracking/tests'
)


