python_sources = [
  '__init__.py',
  'test_arrfuncs.py',
  'test_deprecator.py',
  'test_fast_numpy.py',
  'test_multiproc.py',
  'test_omp.py',
  'test_optpkg.py',
  'test_parallel.py',
  'test_tripwire.py',
  'test_volume.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/utils/tests'
)


