python_sources = [
  '__init__.py',
  'test_align.py',
  'test_denoise.py',
  'test_docstring_parser.py',
  'test_iap.py',
  'test_io.py',
  'test_masking.py',
  'test_nn.py',
  'test_reconst_csa_csd.py',
  'test_reconst_dki.py',
  'test_reconst_dti.py',
  'test_reconst_dsi.py',
  'test_reconst_ivim.py',
  'test_reconst_mapmri.py',
  'test_reconst.py',
  'test_segment.py',
  'test_stats.py',
  'test_tracking.py',
  'test_utils.py',
  'test_viz.py',
  'test_workflow.py',
  'workflow_tests_utils.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/workflows/tests'
)


