python_sources = [
  '__init__.py',
  'test_image.py',
  'test_peak.py',
  'test_renderer.py',
  'test_roi.py',
  'test_sh_billboard.py',
  'test_sh_slicer.py',
  'test_streamline.py',
  'test_surface.py',
  ]


py3.install_sources(
  python_sources,
  pure: false,
  subdir: 'dipy/viz/skyline/render/tests'
)
